[gd_scene load_steps=4 format=3 uid="uid://drkl7cjdt0cut"]

[ext_resource type="Script" path="res://scenes/stock_screen_2.gd" id="1_74sqe"]
[ext_resource type="Texture2D" uid="uid://c8jl5i1f5x868" path="res://Sprites/cc82665f-55ff-4ac0-882e-9796772028f2.jpg" id="2_gms3w"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtt0j"]
size = Vector2(350, 200)

[node name="StockScreen" type="Area2D" node_paths=PackedStringArray("graph", "nameLabel", "priceLabel")]
script = ExtResource("1_74sqe")
graph = NodePath("Line2D")
nameLabel = NodePath("Control/Name")
priceLabel = NodePath("Control/Price")

[node name="1" type="Sprite2D" parent="."]
scale = Vector2(1.048, 0.525)
texture = ExtResource("2_gms3w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vtt0j")

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-175, -125)
points = PackedVector2Array(42, 114, 137, 162, 227, 77, 275, 155, 346, 71)
width = 2.0

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -177.0
offset_top = -104.0
offset_right = 175.0
offset_bottom = 101.0

[node name="Name" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 47.0
grow_vertical = 0
text = "Name"

[node name="Price" type="Label" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -51.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "100.00 "

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
